erma menu-spalla (deadline 2020) initial commit

--- a/website/02-Education/erma/00-menuspalla.html
+++ b/website/02-Education/erma/00-menuspalla.html
@@ -1,51 +1,39 @@
-<p class="subtitle_page_programme">Former Staff Members</p>
-<div class="table_accordion">
-<div class="table_people_cell"><img class="img_persona" src="files/eiuc/zdravko_grebo.jpg" alt="Prof. Dr. Zdravko Grebo - Global Campus">
-<div class="description_page_programme no_border no_padding no_margin_bottom">
-<p class="ruolo_persona titolo_gc_south_east_europe">Honorary President</p>
-<p class="subtitle_page_programme">Prof. Dr. Zdravko Grebo</p>
-<p class="margin_bottom_20">In memoriam, 1947-2019</p>
-<p class="margin_bottom_20">Co-founder of the ERMA Programme, Co-director until 2015 and subsequantly Honorary President, late Zdravko Grebo was Emeritus Professor of Law at the University of Sarajevo.</p>
-<div class="text_read_more">
-<p class="margin_bottom_20">He has been the director of the Centre for Interdisciplinary Postgraduate Studies since its establishment until 2007, and a laureate of many academic awards and international distinctions.</p>
-</div>
-<div class="accordion accordion_gc_south_europe read_more">
-<div class="icon_e_title_accordion">
-<div class="piu_accordion">
-<div class="verticale">[nbsp]</div>
-<div class="orizzontale">[nbsp]</div>
-</div>
-<p class="title_accordion more_less">Read More</p>
-</div>
-</div>
-</div>
-</div>
-<div class="table_people_cell"><img class="img_persona" src="files/eiuc/stefano_bianchini.jpg" alt="Prof. Stefano Bianchini - Global Campus">
-<div class="description_page_programme no_border no_padding no_margin_bottom">
-<p class="ruolo_persona titolo_gc_south_east_europe">Former Programme Co-Director</p>
-<p class="subtitle_page_programme margin_bottom_20">Prof. Stefano Bianchini</p>
-<p class="margin_bottom_20">Co-founder of the ERMA Program and its Co-director until 2018, he is a full professor of East European History and Politics at the School of Political Science of the University of Bologna, Forlì Campus, and - since 1993 - has been coordinating the "Institute for Central-Easter and Balkan Europe".</p>
-</div>
-</div>
-<div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Francesco_Privitera_global_campus_eiuc.jpg" alt="Prof. Dr. Zdravko Grebo - Global Campus">
-<div class="description_page_programme no_border no_padding no_margin_bottom">
-<p class="ruolo_persona titolo_gc_south_east_europe">Former Vice-Director</p>
-<p class="subtitle_page_programme margin_bottom_20">Prof. Francesco Privitera</p>
-<p class="margin_bottom_20">ERMA Coordinator until 2016 and later Programme Vice-Director until 2018 on behalf of the University of Bologna unitil 2018, Francesco Privitera is Professor of Politics and History of Eastern Europe at university of Bologna and president of the the Institute for Central-Eastern and Balkan Europe.</p>
-</div>
-</div>
-<div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Adriano_Remiddi_global_campus_eiuc2.jpg" alt="Adriano Remiddi - Global Campus">
-<div class="description_page_programme no_border no_padding no_margin_bottom">
-<p class="ruolo_persona titolo_gc_south_east_europe">Former Coordinator of the Academic and Development Unit</p>
-<p class="subtitle_page_programme margin_bottom_20">Adriano Remiddi</p>
-<p class="margin_bottom_20">AFormer ERMA Coordinator of the Academic and Development Unit (2016-19) and Academic Tutor (2013-16) on behalf of the IECOB-University of Bologna, Adriano Remiddi has also worked as IECOB research associate, and assistant to the director at the CCSDD Johns Hopkins University SAIS Europe. After ERMA he joined the Global Campus of Human Rights as project manager.</p>
-</div>
-</div>
-<div class="table_people_cell"><img class="img_persona" src="files/eiuc/erma/Maida_Omanovic_global_campus_eiuc.jpg" alt="Maida Omanović - Global Campus">
-<div class="description_page_programme no_border no_padding no_margin_bottom">
-<p class="ruolo_persona titolo_gc_south_east_europe">Former Administrative Assistant</p>
-<p class="subtitle_page_programme margin_bottom_20">Maida Omanović</p>
-<p class="margin_bottom_20">Maida Omanovic is the coordinator of the Master program European Studies and the Master program Management of State and NGOs at the U. of Sarajevo/CIS. She worked administrative assistant at the ERMA programme until 2018. She holds a master degree in Quality Management – a joint master program of the School of Economics and Business of the University of Sarajevo and the Faculty of Economics of the University of Zagreb.</p>
-</div>
-</div>
-</div>
+<aside class="spalla_sx spalla_gc_south_east_europe">
+    <div class="ce_image block">
+        <figure class="image_container">
+            <img src="files/eiuc/logo_gc_south_east_europe.svg" width="180" height="45" alt="">
+        </figure>
+    </div>
+    <nav class="mod_customnav tab_spalla block">
+        {{insert_module::35}}
+    </nav>
+    <div class="ce_text width_100 block">
+        <div class="link_sito">
+            <p>Web site</p>
+            <a class="sito titolo_gc_south_east_europe" href="http://cis.unsa.ba/en/erma/" target="_blank">http://cis.unsa.ba/en/erma/</a>
+        </div>
+    </div>
+    <div class="ce_text width_100 block">
+        <div class="ce_text deadline block">
+            <p class="margin_bottom_5">Application deadline:</p>
+            <p class="description_blu_container titolo_gc_south_east_europe">20 September 2020</p>
+        </div>
+        <p><a href="http://cis.unsa.ba/en/erma/"> <button class="button button--aylen button_south_europe button--aylen_south_europe no_margin_bottom">Apply</button></a></p>
+    </div>
+</aside>
+<section class="container no_margin_bottom">
+    <div class="ce_text title_page_programme_e_logo block">
+        <h3 class="title_page_programme titolo_gc_south_east_europe"><span style="dispaly: inline-block;">ERMA</span>, European Regional Master's Programme in Democracy and Human Rights in South East Europe</h3>
+        <p><img class="logo_universita" src="files/eiuc/logo_ERMA_4.jpg" alt="logo università" width="382" height="179"></p>
+    </div>
+    <div class="ce_text cta_mobile block">
+        <div class="ce_text cta_mobile block">
+            <div class="deadline_blocco_sconto">
+                <div class="deadline">
+                    <p class="margin_bottom_5">Application deadline:</p>
+                    <p class="description_blu_container titolo_gc_south_east_europe">20 September 2020</p>
+                </div>
+            </div>
+            <p><a href="http://cis.unsa.ba/en/erma/"> <button class="button button--aylen button_south_europe button--aylen_south_europe no_margin_bottom">Apply</button></a></p>
+        </div>
+    </div>
