--- a/website/02-Education/erma/03-lecturers-and-staff-former.html
+++ b/website/02-Education/erma/03-lecturers-and-staff-former.html
@@ -7,7 +7,7 @@
             <p class="margin_bottom_20">In memoriam, 1947-2019</p>
             <p class="margin_bottom_20">Co-founder of the ERMA Programme, Co-director until 2015 and subsequantly Honorary President, late Zdravko Grebo was Emeritus Professor of Law at the University of Sarajevo.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">He has been the director of the Centre for Interdisciplinary Postgraduate Studies since its establishment until 2007, and a laureate of many academic awards and international distinctions.</p>
+                <p class="margin_bottom_20">He has been the director of the Centre for Interdisciplinary Postgraduate Studies (later Centre for Interdisciplinary Studies) since its establishment until 2007, and a laureate of many academic awards and international distinctions.</p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -20,7 +20,7 @@
             </div>
         </div>
     </div>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/stefano_bianchini.jpg" alt="Prof. Stefano Bianchini - Global Campus">
+    <!-- <div class="table_people_cell"><img class="img_persona" src="files/eiuc/stefano_bianchini.jpg" alt="Prof. Stefano Bianchini - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_south_east_europe">Former Programme Co-Director</p>
             <p class="subtitle_page_programme margin_bottom_20">Prof. Stefano Bianchini</p>
@@ -47,5 +47,5 @@
             <p class="subtitle_page_programme margin_bottom_20">Maida Omanović</p>
             <p class="margin_bottom_20">Maida Omanovic is the coordinator of the Master program European Studies and the Master program Management of State and NGOs at the U. of Sarajevo/CIS. She worked administrative assistant at the ERMA programme until 2018. She holds a master degree in Quality Management – a joint master program of the School of Economics and Business of the University of Sarajevo and the Faculty of Economics of the University of Zagreb.</p>
         </div>
-    </div>
+    </div> -->
 </div>
