fix poster and dates on fb + insta

--- a/website/02-Education/erma/07-media-toolkit.html
+++ b/website/02-Education/erma/07-media-toolkit.html
@@ -1,140 +1,125 @@
 <p class="subtitle_page_programme margin_bottom_40">Media Toolkit</p>
-
 <!-- Header Video -->
-    <div class="video169_container"><iframe class="video169" src="https://player.vimeo.com/video/275048922?color=69c8f3&byline=0&portrait=0" frameborder="0" allowfullscreen="">
-        </iframe></div>
-
-
+<div class="video169_container">
+	<iframe class="video169" src="https://player.vimeo.com/video/275048922?color=69c8f3&byline=0&portrait=0" frameborder="0" allowfullscreen=""></iframe>
+</div>
 <-- table accordion opening -->
-		<div class="container no_margin_bottom">
-			<div class="table_accordion">
-
-
-
-<!-- Video Trailer -->
-    <div class="table_accordion_cell">
-        <div class="accordion accordion_gc">
-            <div class="icon_e_title_accordion">
-                <p class="title_accordion">Video Trailer</p>
-                <p class="number_universities">[nbsp]</p>
-                <div class="piu_accordion">
-                    <div class="verticale">[nbsp]</div>
-                    <div class="orizzontale">[nbsp]</div>
+    <div class="container no_margin_bottom">
+        <div class="table_accordion">
+            <!-- Video Trailer -->
+            <div class="table_accordion_cell">
+                <div class="accordion accordion_gc">
+                    <div class="icon_e_title_accordion">
+                        <p class="title_accordion">Video Trailer</p>
+                        <p class="number_universities">[nbsp]</p>
+                        <div class="piu_accordion">
+                            <div class="verticale">[nbsp]</div>
+                            <div class="orizzontale">[nbsp]</div>
+                        </div>
+                    </div>
+                    <div class="list_accordion">
+                        <p class="margin_bottom_20 "><a class="titolo_gc_europe" href="https://player.vimeo.com/play/1026114549?s=275048922_1562149378_8dff8262178924c4cecb31a43c16b043[&amp;]loc=external[&amp;]context=Vimeo%5CController%5CClipController.main[&amp;]download=1" target="_blank">Video Download</a></p>
+                    </div>
                 </div>
             </div>
-            <div class="list_accordion">
-                <p class="margin_bottom_20 "><a class="titolo_gc_europe" href="https://player.vimeo.com/play/1026114549?s=275048922_1562149378_8dff8262178924c4cecb31a43c16b043[&amp;]loc=external[&amp;]context=Vimeo%5CController%5CClipController.main[&amp;]download=1" target="_blank">Video Download</a></p>
+            <!-- Short clips -->
+            <div class="table_accordion_cell">
+                <div class="accordion accordion_gc">
+                    <div class="icon_e_title_accordion">
+                        <p class="title_accordion">Short Clips</p>
+                        <p class="number_universities">[nbsp]</p>
+                        <div class="piu_accordion">
+                            <div class="verticale">[nbsp]</div>
+                            <div class="orizzontale">[nbsp]</div>
+                        </div>
+                    </div>
+                    <div class="list_accordion"><iframe style="width: 100%; height: 730px; border: 0;" src="https://drive.google.com/embeddedfolderview?id=1CP62fuMP3x62C9tB8vU_NVjoCmMZ1l-K#grid"></iframe></div>
+                </div>
+            </div>
+            <!-- CFA -->
+            <div class="table_accordion_cell">
+                <div class="accordion accordion_gc">
+                    <div class="icon_e_title_accordion">
+                        <p class="title_accordion">Call for Applications</p>
+                        <p class="number_universities">[nbsp]</p>
+                        <div class="piu_accordion">
+                            <div class="verticale">[nbsp]</div>
+                            <div class="orizzontale">[nbsp]</div>
+                        </div>
+                    </div>
+                    <div class="list_accordion">
+                        <p class="margin_bottom_20">The official Call for Applications 2020/2021.</p>
+                        <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1J-Q4oBbjTySPwJmGV-rNy6sDuypNknKo/preview"></iframe></div>
+                        <p>[nbsp]</p>
+                        <div class="download"><a href="https://drive.google.com/open?id=1J-Q4oBbjTySPwJmGV-rNy6sDuypNknKo" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                            <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1J-Q4oBbjTySPwJmGV-rNy6sDuypNknKo" target="_blank">Download</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <! --  Info Sheet -->
+            <div class="table_accordion_cell">
+                <div class="accordion accordion_gc">
+                    <div class="icon_e_title_accordion">
+                        <p class="title_accordion">Info Sheet</p>
+                        <p class="number_universities">[nbsp]</p>
+                        <div class="piu_accordion">
+                            <div class="verticale">[nbsp]</div>
+                            <div class="orizzontale">[nbsp]</div>
+                        </div>
+                    </div>
+                    <div class="list_accordion">
+                        <p class="margin_bottom_20">The official Info Sheet 2020/2021.</p>
+                        <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1ff9Hdu3Y_Sv7E7sgAX4_q-WjKxf8Aw1A/preview"></iframe></div>
+                        <p>[nbsp]</p>
+                        <div class="download"><a href="https://drive.google.com/open?id=1ff9Hdu3Y_Sv7E7sgAX4_q-WjKxf8Aw1A" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                            <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1ff9Hdu3Y_Sv7E7sgAX4_q-WjKxf8Aw1A" target="_blank">Download</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Poster -->
+            <div class="table_accordion_cell">
+                <div class="accordion accordion_gc">
+                    <div class="icon_e_title_accordion">
+                        <p class="title_accordion">Poster</p>
+                        <p class="number_universities">[nbsp]</p>
+                        <div class="piu_accordion">
+                            <div class="verticale">[nbsp]</div>
+                            <div class="orizzontale">[nbsp]</div>
+                        </div>
+                    </div>
+                    <div class="list_accordion">
+                        <p class="margin_bottom_20">This poster can be printed[nbsp]on both sides[nbsp]and in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
+                        <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1baYP0827__KvdtJ3-aFkOoOxrjLpOxcn/preview"></iframe></div>
+                        <p>[nbsp]</p>
+                        <div class="download"><a href="https://drive.google.com/file/d/1baYP0827__KvdtJ3-aFkOoOxrjLpOxcn/view?usp=sharing" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                            <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/file/d/1baYP0827__KvdtJ3-aFkOoOxrjLpOxcn/view?usp=sharing" target="_blank">Download</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <p>{{file::eiuc/promo-erma/fb-posts.php}}</p>
+            <p>{{file::eiuc/promo-erma/insta-posts.php}}</p>
+            <p>{{file::eiuc/promo-erma/img-posts.php}}</p>
+            <div class="table_accordion_cell">
+                <div class="accordion accordion_gc">
+                    <div class="icon_e_title_accordion">
+                        <p class="title_accordion">Pictures (Media Kit)</p>
+                        <p class="number_universities">[nbsp]</p>
+                        <div class="piu_accordion">
+                            <div class="verticale">[nbsp]</div>
+                            <div class="orizzontale">[nbsp]</div>
+                        </div>
+                    </div>
+                    <div class="list_accordion">
+                        <p class="margin_bottom_20">This archive contains some pictures in high resolution that can be used both on website(s) and social media.</p>
+                        <p>[nbsp]</p>
+                        <div class="download"><a href="https://drive.google.com/open?id=16eN4I-5fGNpMpLOhKZNtN_Qyft8DGY7f" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                            <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=16eN4I-5fGNpMpLOhKZNtN_Qyft8DGY7f" target="_blank">Download</a></p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
-<!-- Short clips -->
-<div class="table_accordion_cell">
-<div class="accordion accordion_gc">
-<div class="icon_e_title_accordion">
-<p class="title_accordion">Short Clips</p>
-<p class="number_universities">[nbsp]</p>
-<div class="piu_accordion">
-<div class="verticale">[nbsp]</div>
-<div class="orizzontale">[nbsp]</div>
-</div>
-</div>
-<div class="list_accordion"><iframe style="width: 100%; height: 730px; border: 0;" src="https://drive.google.com/embeddedfolderview?id=1CP62fuMP3x62C9tB8vU_NVjoCmMZ1l-K#grid"></iframe></div>
-</div>
-</div>
-
-
-<!-- CFA -->
-<div class="table_accordion_cell">
-<div class="accordion accordion_gc">
-<div class="icon_e_title_accordion">
-<p class="title_accordion">Call for Applications</p>
-<p class="number_universities">[nbsp]</p>
-<div class="piu_accordion">
-<div class="verticale">[nbsp]</div>
-<div class="orizzontale">[nbsp]</div>
-</div>
-</div>
-<div class="list_accordion">
-<p class="margin_bottom_20">The official Call for Applications 2020/2021.</p>
-<div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1J-Q4oBbjTySPwJmGV-rNy6sDuypNknKo/preview"></iframe></div>
-<p>[nbsp]</p>
-<div class="download"><a href="https://drive.google.com/open?id=1J-Q4oBbjTySPwJmGV-rNy6sDuypNknKo" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-<p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1J-Q4oBbjTySPwJmGV-rNy6sDuypNknKo" target="_blank">Download</a></p>
-</div>
-</div>
-</div>
-</div>
-
-<! --  Info Sheet -->
-<div class="table_accordion_cell">
-<div class="accordion accordion_gc">
-<div class="icon_e_title_accordion">
-<p class="title_accordion">Info Sheet</p>
-<p class="number_universities">[nbsp]</p>
-<div class="piu_accordion">
-<div class="verticale">[nbsp]</div>
-<div class="orizzontale">[nbsp]</div>
-</div>
-</div>
-<div class="list_accordion">
-<p class="margin_bottom_20">The official Info Sheet 2020/2021.</p>
-<div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1ff9Hdu3Y_Sv7E7sgAX4_q-WjKxf8Aw1A/preview"></iframe></div>
-<p>[nbsp]</p>
-<div class="download"><a href="https://drive.google.com/open?id=1ff9Hdu3Y_Sv7E7sgAX4_q-WjKxf8Aw1A" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-<p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1ff9Hdu3Y_Sv7E7sgAX4_q-WjKxf8Aw1A" target="_blank">Download</a></p>
-</div>
-</div>
-</div>
-</div>
-
-
-<!-- Poster -->	
-<div class="table_accordion_cell">
-<div class="accordion accordion_gc">
-<div class="icon_e_title_accordion">
-<p class="title_accordion">Poster</p>
-<p class="number_universities">[nbsp]</p>
-<div class="piu_accordion">
-<div class="verticale">[nbsp]</div>
-<div class="orizzontale">[nbsp]</div>
-</div>
-</div>
-<div class="list_accordion">
-<p class="margin_bottom_20">This poster can be printed[nbsp]on both sides[nbsp]and in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
-<div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1MSXO5vf-bKczgP9T3vEurgYj5UK4z2GE/preview"></iframe></div>
-<p>[nbsp]</p>
-<div class="download"><a href="https://drive.google.com/open?id=1MSXO5vf-bKczgP9T3vEurgYj5UK4z2GE" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-<p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1MSXO5vf-bKczgP9T3vEurgYj5UK4z2GE" target="_blank">Download</a></p>
-</div>
-</div>
-</div>
-</div>
-
-
-<p>{{file::eiuc/promo-erma/fb-posts.php}}</p>
-
-<p>{{file::eiuc/promo-erma/insta-posts.php}}</p>
-
-<p>{{file::eiuc/promo-erma/img-posts.php}}</p>
-
-
-<div class="table_accordion_cell">
-<div class="accordion accordion_gc">
-<div class="icon_e_title_accordion">
-<p class="title_accordion">Pictures (Media Kit)</p>
-<p class="number_universities">[nbsp]</p>
-<div class="piu_accordion">
-<div class="verticale">[nbsp]</div>
-<div class="orizzontale">[nbsp]</div>
-</div>
-</div>
-<div class="list_accordion">
-<p class="margin_bottom_20">This archive contains some pictures in high resolution that can be used both on website(s) and social media.</p>
-<p>[nbsp]</p>
-<div class="download"><a href="https://drive.google.com/open?id=16eN4I-5fGNpMpLOhKZNtN_Qyft8DGY7f" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-<p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=16eN4I-5fGNpMpLOhKZNtN_Qyft8DGY7f" target="_blank">Download</a></p>
-</div>
-</div>
-</div>
-</div>
