part 2 initial commit

--- a/website/06-Stories-HRP/pages/07-founders-part2.html
+++ b/website/06-Stories-HRP/pages/07-founders-part2.html
@@ -1,12 +1,25 @@
-<style>
-.forum {
-	font-size: 23px;
-	font-weight: 400;
-}
-</style>
-<div class="description_page_programme">
-<blockquote>
-<h4 class="forum">I welcome GC <i style="font-weight: 600;">Human Rights Preparedness</i>, an important new initiative from the Global Campus of Human Rights.</h4>
-</blockquote>
-<p>[nbsp]</p>
-<p>— Mary Robinson, <em> Global Campus of Human Rights Honorary President</em></p></div>
+<p class="subtitle_page_programme">Academic Responsibles</p>
+<div class="table_accordion">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/venice-school/2018/faculty/Kalliope_Agapiou_Josephides_venice_school_eiuc_global_campus-2.jpg" alt="Kalliope Agapiou-Josephides - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_europe">Academic Responsible</p>
+            <p class="subtitle_page_programme margin_bottom_20">Kalliope Agapiou-Josephides</p>
+            <p class="margin_bottom_20">Kalliope Agapiou Josephides has a great interest, and a long experience in the nexus of human rights and gender equality. She served as Chair of the <em>European Institute for Gender Equality</em> (EU Agency), Vice-President of the <em>European Inter University Centre for Human Rights and Democratisation</em>.</p>
+            <!--<p class="margin_bottom_20">She holds a PhD in Political Science from Sorbonne University, PARIS I Panthéon-Sorbonne, a Post Graduate Diploma in High European Studies.</p>-->
+            <div class="text_read_more">
+                <p class="margin_bottom_20">She is a founding member of the <em>Mediterranean Women Mediators Network</em>.</p>
+                <p class="margin_bottom_20">She has participated in and led several national and international research projects, including a European Parliament study on “Women’s Rights During Democratic Transitions”. She has served as academic convener/ speaker at high-level international events and has taught/ delivered lectures across Europe and around the world: e.g. France, Germany, Italy, Belgium, Poland, Portugal, Argentina, India, China, Australia…</p>
+                <p class="margin_bottom_20">Kalliope Agapiou Josephides holds a PhD in Political Science from the Paris I Panthéon - Sorbonne University. She is an Assistant Professor at the University of Cyprus and the recipient of a Jean Monnet Chair (2001). She is the European Master Director for the University of Cyprus.</p>
+            </div>
+            <div class="accordion accordion_gc_south_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
