contribute final draft

--- a/website/06-Stories-HRP/pages/03-contribute-part1.html
+++ b/website/06-Stories-HRP/pages/03-contribute-part1.html
@@ -1,7 +1,7 @@
 <p class="subtitle_page_programme">Contribute</p>
 <p class="margin_bottom_20">All submissions to <em>GC Human Rights Preparedness</em> should have a clear human rights orientation, aiming overall to contribute towards the development of a rights-based approach to pandemics and other emergencies. </p>
 
-<p class="margin_bottom_20">If you wish to contribute to GC Human Rights Preparedness, follow the guidelines below. You can also view them in PDF format.</p>
+<p class="margin_bottom_20">If you wish to contribute to GC Human Rights Preparedness, follow the guidelines below. You can also view them in <a href="https://drive.google.com/file/d/1ykrMHLzCjpbG14h14euzmcU5oFBVHSaW/view?usp=sharing" target="_blank" class="titolo_gc_europe">PDF format</a>.</p>
 
 <div class="accordion margin_bottom_10 accordion_gc_europe">
     <div class="icon_e_title_accordion">
@@ -12,19 +12,19 @@
         <p class="title_accordion titolo_gc_europe">Guidelines</p>
     </div>
     <div class="text_accordion">
-        <p class="margin_bottom_20">Submissions should foreground accessibility. The opening sentences of your submission are crucial: use simple, direct and lively language to give a concise statement of your main idea. By doing this, you help to ensure that readers look at your full submission. </p>
+        <p class="margin_bottom_20">Submissions should foreground accessibility. The opening sentences of the submission are crucial: use simple, direct and lively language to give a concise statement of your main idea, including how it relates to a rights-based approach to pandemics and other emergencies. By doing this, you help to ensure that readers look at your full submission.   </p>
 
         <p class="margin_bottom_20">A variety of styles are welcome: analysis, stories, reflections, testimonies, best practices, recent developments, bold thinking, etc. Submissions can be in written/photo/video/audio form.</p>
 
         <p class="margin_bottom_20">We welcome submissions across the human rights-pandemics-emergencies spectrum, including topics related to:</p>
 
         <ul class="lista_con_pallini margin_bottom_20">
-            <li>cross-cutting themes (eg, gender, equity, disability, poverty, sustainable development) democracy, governance, rule of law, non-discrimination) </li>
-            <li>groups most at risk (eg, children, women, workers, migrants) </li>
-            <li>specific rights and freedoms and corresponding duties and responsibilities (eg, health, education, food, housing, movement, life).</li>
+            <li>cross-cutting themes (eg, gender, equity, disability, poverty, sustainable development) democracy, governance, rule of law, non-discrimination)  </li>
+            <li>groups most at risk (eg, children, women, workers, migrants)</li>
+            <li>specific rights and freedoms, duties and responsibilities (eg, health, education, food, housing, movement, life).</li>
         </ul>
 
-        <p class="margin_bottom_20">The multiregional and multidisciplinary character of the Global Campus is integral to the initiative. Thus, contributions can have global, regional or local relevance; comparative perspectives are also welcome. Contributions can be multidisciplinary, interdisciplinary or from the perspective of any one of the arts, humanities and social sciences disciplines that enrich our network—including Law, International Relations, Sociology, Economics, Politics, Anthropology, History, Education, Health and the Arts.</p>
+        <p class="margin_bottom_20">The multiregional and multidisciplinary character of the Global Campus are integral to the initiative. Thus, contributions can have global, regional or local relevance; comparative perspectives are also welcome. Contributions can be multidisciplinary, interdisciplinary or from the perspective of any one of the arts, humanities and social sciences disciplines that enrich our network—including Law, International Relations, Sociology, Economics, Politics, Anthropology, History, Education, Health and the Arts.</p>
 
         <p class="margin_bottom_20">Submissions are invited in English. To enhance accessibility, we would be pleased to receive a second version of the submission in a different language: the English-language version will be used for review and editing, but we shall upload both versions to the website. Our website has a search facility that allows readers to find submissions in languages other than English.</p>
 
@@ -45,17 +45,18 @@
 
 		<ul class="lista_con_pallini margin_bottom_20">
 
-			<li><strong>Title</strong>: no more than 100 characters. Aim for something that captures the essence of your contribution in a simple but interesting way. Readers like titles that are jargon-free, attention-grabbing and concise, and these titles are also much easier to share on social media. Avoid italics as they interfere with online sharing. </li>
+			<li><strong>Title</strong>: no more than 100 characters. Aim for something that captures the essence of your contribution in a simple but interesting way. As a general rule, readers prefer titles that are jargon-free, attention-grabbing and concise; these titles are also much easier to share on social media. Avoid italics as they interfere with online sharing.</li>
 			<li><strong>Tags</strong>: 4-5 relevant keywords at the top of your contribution. </li>
-			<li><strong>Region</strong>: specify the GC region relevant to your contribution. If the contribution is relevant to more than one region, or if you offer a global perspective, please state this. </li>
+			<li><strong>Region</strong>: specify the GC region relevant to your contribution. If the contribution is relevant to more than one region, or you are offering a global perspective, please state this.  </li>
 			<li><strong>Discipline</strong>: specify the discipline or disciplines that inform your contribution (eg History; Law; Political Science). </li>
-			<li><strong>Type</strong>: if you submit an audio or a video file (eg, an interview, a self-recording) please add a title and short summary. Submit any image as a stand-alone file and indicate the caption and full copyright attribution. Hyperlinks and images can be included in any text or image-based submission.</li>
-			<li><strong>Length</strong>: text: max 700-1200 words | audio: max 5 minutes | video: max 3 minutes | slideshare: max 20 slides | photo essay: max 5 photos, each accompanied by text (max 1200 words) | announcements: max 200 words.</li>
+            <li><strong>Excerpt</strong>: include an excerpt of max 40 words as a summary of the content or aim of the post.</li>
+			<li><strong>Type</strong>: if you submit an audio or a video file (eg, an interview, a self-recording) please use a Word document with the title, a short summary and the link to the audio or video file. Submit any image as a stand-alone file and indicate the caption and full copyright attribution. Hyperlinks and images can be included in any text or image-based submission.</li>
+			<li><strong>Length</strong>: text: max 700-1200 words | audio: max 5 minutes | video: max 3 minutes | slide shares: max 20 slides | photo essay: max 5 photos, each accompanied by text (max 1200 words) | announcements: max 200 words.</li>
 			<li><strong>References</strong>: referencing must be via in-text citations. Embed hyperlinks to your sources; try to link to no more than 3 words in your text, and for any particular source, include the hyperlink only once in the text. Do not use footnotes. A reference list can be added as a separate file for video/audio submissions. </li>
-			<li><strong>Originality</strong>: please indicate if your submission has been published or submitted for consideration elsewhere and if you have permission to republish. Where a submission has been prepared specifically for GC Human Rights Preparedness, once it has been published, you are welcome to submit it elsewhere, noting where it first appeared. </li>
+			<li><strong>Originality</strong>: please indicate if your submission has been published or submitted for consideration elsewhere and if you have permission to republish. Where a submission has been prepared specifically for GC <em>Human Rights Preparedness</em>, once it has been published, you are welcome to submit it elsewhere, noting where it first appeared. </li>
 			<li><strong>Language</strong>: UK English (eg, ise not ize), but we would be pleased to receive your submission in a second language too. Please avoid using Latin terms unless absolutely necessary. Avoid symbols too: our readers come from different disciplines, so if you are referring to a particular legal provision, use paragraph, section, etc. </li>
 			<li><strong>Your name, title, affiliation and research interests</strong>: max 50 words.</li>
-			<li><strong>Photo</strong>: please include a colour photograph of yourself. If your submission is a blogpost, you may also include a licence-free, high-resolution photograph that is directly relevant to the content of your submission. Please make sure the photo is of high quality (1920x1080px).</li>
+			<li><strong>Photo(s)</strong>: ●please include a colour photograph of yourself. If your submission is a blogpost, you may also include a licence-free, high-resolution photograph that is directly relevant to the content of your submission. Please make sure the photo is of high quality (1920x1080px).</li>
 
 		</ul>
 
