--- a/website/06-Stories-HRP/pages/07-founders-part2.html
+++ b/website/06-Stories-HRP/pages/07-founders-part2.html
@@ -1,21 +1,83 @@
-<p class="subtitle_page_programme">Academic Responsibles</p>
+<p class="subtitle_page_programme">Founders</p>
 <div class="table_accordion">
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/venice-school/2018/faculty/Kalliope_Agapiou_Josephides_venice_school_eiuc_global_campus-2.jpg" alt="Kalliope Agapiou-Josephides - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Academic Responsible</p>
             <p class="subtitle_page_programme margin_bottom_20">Kalliope Agapiou-Josephides</p>
-            <p class="margin_bottom_20">Kalliope Agapiou Josephides has a great interest, and a long experience in the nexus of human rights and gender equality. She served as Chair of the <em>European Institute for Gender Equality</em> (EU Agency), Vice-President of the <em>European Inter University Centre for Human Rights and Democratisation</em>.</p>
+            <p class="margin_bottom_20">Kalliope Agapiou Josephides, PhD in Political Science, Paris I Panthéon - Sorbonne University, is a Jean Monnet Chair holder (2001) and Assistant Professor at the University of Cyprus. She sits on the Council of the Global Campus of Human Rights and is the European Master’s Director for the University of Cyprus.</p>
             <!--<p class="margin_bottom_20">She holds a PhD in Political Science from Sorbonne University, PARIS I Panthéon-Sorbonne, a Post Graduate Diploma in High European Studies.</p>-->
             <div class="text_read_more">
-                <p class="margin_bottom_20">She is a founding member of the <em>Mediterranean Women Mediators Network</em>.</p>
-                <p class="margin_bottom_20">She has participated in and led several national and international research projects, including a European Parliament study on “Women’s Rights During Democratic Transitions”. She has served as academic convener/ speaker at high-level international events and has taught/ delivered lectures across Europe and around the world: e.g. France, Germany, Italy, Belgium, Poland, Portugal, Argentina, India, China, Australia…</p>
-                <p class="margin_bottom_20">Kalliope Agapiou Josephides holds a PhD in Political Science from the Paris I Panthéon - Sorbonne University. She is an Assistant Professor at the University of Cyprus and the recipient of a Jean Monnet Chair (2001). She is the European Master Director for the University of Cyprus.</p>
+                <p class="margin_bottom_20">She served as chair of the European Institute for Gender Equality (EU Agency) and Vice- President of the European Inter University Centre for Human Rights and Democratisation. She is a founding member of the Mediterranean Women Mediators Network, and a member of the scientific advisory board of the European Yearbook of Human Rights.</p>
+                <p class="margin_bottom_20">She has a great interest, and long experience, in the nexus of human rights and gender equality. She has participated in and led several national and international research projects. She served as lead author in the <em>United Nations Global Study on Children Deprived of Liberty</em> and the European Parliament study on <em>Women’s Rights During Democratic Transitions</em>. She has served as academic convener/speaker at high-level international events and has taught/delivered lectures around the world.</p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
                     <div class="piu_accordion">
                         <div class="verticale">[nbsp]</div>
                         <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ema/Therese_Murphy_gchumanrights3.png" alt="Prof. Thérèse Murphy - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="subtitle_page_programme margin_bottom_20">Thérèse Murphy</p>
+            <p class="margin_bottom_20">Thérèse Murphy is professor of law and director of the Health & Human Rights Unit at Queen’s University Belfast. She is also chairperson of the European Master's on Human Rights and Democratisation, and serves on the Council of the Global Campus of Human Rights. A former Fulbright fellow, she studied law at University College Dublin and the University of Cambridge, and was admitted to the bar at King’s Inns, Dublin.</p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">Her field of expertise is human rights law and practice, with particular interests in health, science and technology, and human rights method.</p>
+                <p class="margin_bottom_20">She is a member of the editorial board of <em>the Human Rights Law Review</em>, associate editor of <em>BMC International Health & Human Rights</em> and co-editor of the Bloomsbury/Hart book series, Law and Health. She sits on the Moral & Ethical Advisory Group established by the UK’s Department of Health and Social Care.</p>
+            </div>
+            <div class="accordion accordion_gc_south_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/img_global_campus_chair.jpg" alt="Veronica Gomez - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="subtitle_page_programme margin_bottom_20">Veronica Gomez</p>
+            <p class="margin_bottom_20">Professor Veronica Gomez is President of the Global Campus of Human Rights. She is professor of law at the University of San Martin (UNSAM). She is director for education at Global Campus Latin America (LATMA) in Buenos Aires (2011-). </p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">She is responsible for various international human rights programmes with the participation of regional stakeholders. She holds a degree in international law (UBA) and an LLM (Nottingham). </p>
+                <p class="margin_bottom_20">Her field of expertise is in the area of international and regional protection of human rights, and genetics and human rights.</p>
+                <p class="margin_bottom_20">Her professional path includes her role as Principal Specialist at the Inter-American Commission of Human Rights of the Organisation of American States in Washington DC (1998-2009) and as a Senior Advisor on Human Rights at the Ministry of Foreign Affairs of Argentina (2010-2011).</p>
+            </div>
+            <div class="accordion accordion_gc_south_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="table_people_cell show"><img class="img_persona" src="files/eiuc/staff/Manfred_Nowak_global_campus_eiuc.jpg" alt="Manfred Nowak - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom show">
+           
+            <p class="subtitle_page_programme margin_bottom_20">Manfred Nowak</p>
+            <p class="margin_bottom_20">Manfred Nowak is Professor of International Law and Human Rights at Vienna University and Director of the Vienna Master of Arts in Human Rights. He has been appointed as Secretary General of the GC/EIUC in January 2016.</p>
+            <div class="text_read_more show">
+                <p class="margin_bottom_20">He served in various expert functions, such as UN expert on enforced disappearances (1993-2006), UN Special Rapporteur on Torture (2004-2010), judge at the Human Rights Chamber for Bosnia and Herzegovina (1996-2003) and Vice Chairperson of the EU Fundamental Rights Agency (2013-2018). In 2016 he was appointed Independent Expert leading the UN Global Study on Children Deprived of Liberty.</p>
+                <p class="margin_bottom_20">He was Director of the Netherlands Institute of Human Rights at Utrecht University (SIM: 1987-1989) and of the Ludwig Boltzmann Institute of Human Rights at Vienna University (BIM: 1992-2019) as well as Visiting Professor at the University of Lund (2002-2003), the Graduate Institute of International and Development Studies in Geneva (2008-2009), and at Stanford University in Palo Alto (2014).</p>
+                <p class="margin_bottom_20">He is author of more than 600 publications in the fields of public and international law and human rights.</p>
+                <!-- <div class="download"><a href="files/eiuc/staff/MANFRED_NOWAK_CV.pdf" download="files/eiuc/staff/MANFRED_NOWAK_CV.pdf"><img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+<p class="titolo_gc_europe"><a class="download" href="files/eiuc/staff/MANFRED_NOWAK_CV.pdf" download="">CV Download</a></p>
+</div>
+<p>Email: <a class="titolo_gc_europe" href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#109;&#97;&#x6E;&#102;&#114;&#101;&#100;&#x2E;&#x6E;&#111;&#x77;&#x61;&#107;&#64;&#x65;&#105;&#x75;&#x63;&#x2E;&#111;&#114;&#103;">&#109;&#97;&#x6E;&#102;&#114;&#101;&#100;&#x2E;&#x6E;&#111;&#x77;&#x61;&#107;&#64;&#x65;&#105;&#x75;&#x63;&#x2E;&#111;&#114;&#103;</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 347 6263102">+39 347 6263102</a></p> -->
+            </div>
+            <div class="accordion accordion_gc_arab read_more show">
+                <div class="icon_e_title_accordion show">
+                    <div class="piu_accordion show">
+                        <div class="verticale show">&nbsp;</div>
+                        <div class="orizzontale show">&nbsp;</div>
                     </div>
                     <p class="title_accordion more_less">Read More</p>
                 </div>
