initial commit meet the team (new format)

--- a/website/06-Stories-HRP/pages/03-contribute-part1.html
+++ b/website/06-Stories-HRP/pages/03-contribute-part1.html
@@ -56,7 +56,7 @@
 			<li><strong>Originality</strong>: please indicate if your submission has been published or submitted for consideration elsewhere and if you have permission to republish. Where a submission has been prepared specifically for GC <em>Human Rights Preparedness</em>, once it has been published, you are welcome to submit it elsewhere, noting where it first appeared. </li>
 			<li><strong>Language</strong>: UK English (eg, ise not ize), but we would be pleased to receive your submission in a second language too. Please avoid using Latin terms unless absolutely necessary. Avoid symbols too: our readers come from different disciplines, so if you are referring to a particular legal provision, use paragraph, section, etc. </li>
 			<li><strong>Your name, title, affiliation and research interests</strong>: max 50 words.</li>
-			<li><strong>Photo(s)</strong>: ●please include a colour photograph of yourself. If your submission is a blogpost, you may also include a licence-free, high-resolution photograph that is directly relevant to the content of your submission. Please make sure the photo is of high quality (1920x1080px).</li>
+			<li><strong>Photo(s)</strong>: please include a colour photograph of yourself. If your submission is a blogpost, you may also include a licence-free, high-resolution photograph that is directly relevant to the content of your submission. Please make sure the photo is of high quality (1920x1080px).</li>
 
 		</ul>
 
