--- a/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
+++ b/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
@@ -1,3 +1,31 @@
+<script src="https://cdn.jsdelivr.net/npm/modaal@0.4.4/dist/js/modaal.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modaal@0.4.4/dist/css/modaal.min.css">
+<style>
+.img-center {
+    display: block;
+    margin: 0 auto;
+    border-radius: 50%;
+}
+
+.text-center{
+    text-align: cetner;
+   width: 150px;
+}
+
+.centeredtext{
+    text-align: center;
+}
+
+.lecturer_name{
+    color: #75716e;
+    text-align: center;
+    margin-bottom: 0px
+}
+
+.margin_bottom_20{
+        color: #75716e;
+}
+</style>
 <div class="ce_text description_page_programme block show">
 <p class="subtitle_page_programme">Editors</p>
 <p><a href="#ca" target="_blank" class="titolo_gc_europe ca">Chiara Altafin</a>, GC Europe</p>
@@ -71,7 +99,56 @@
         <p class="margin_bottom_20">Research and expertise: Development, media, international relations, protection mechanisms, Southeast Asian politics, human rights education.</p>
 
 </div>
+
+<div id="kaj" style="display:none;">
+
+        <img src="files/eiuc/venice-school/2018/faculty/Kalliope_Agapiou_Josephides_venice_school_eiuc_global_campus-2.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Kalliope Agapiou-Josephides</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_europe"><span class="titolo_gc_europe">GC Human Rights Prearedness Founding Editor</span></p>
+
+        <p class="margin_bottom_20">Kalliope Agapiou Josephides has a great interest, and a long experience in the nexus of human rights and gender equality. She served as Chair of the European Institute for Gender Equality (EU Agency), Vice-President of the <em>European Inter University Centre for Human Rights and Democratisation</em>.</p>
+
+        <p class="margin_bottom_20">She is a founding member of the <em>Mediterranean Women Mediators Network</em>.</p>
+
+        <p class="margin_bottom_20">She has participated in and led several national and international research projects, including a European Parliament study on “Women’s Rights During Democratic Transitions”. She has served as academic convener/ speaker at high-level international events and has taught/ delivered lectures across Europe and around the world: e.g. France, Germany, Italy, Belgium, Poland, Portugal, Argentina, India, China, Australia…</p>
+
+        <p class="margin_bottom_20">Kalliope Agapiou Josephides holds a PhD in Political Science from the Paris I Panthéon - Sorbonne University. She is an Assistant Professor at the University of Cyprus and the recipient of a Jean Monnet Chair (2001). She is the European Master Director for the University of Cyprus.</p>
+
 </div>
+<div id="tm" style="display:none;">
+
+        <img src="files/eiuc/ema/Therese_Murphy_gchumanrights3.png" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Thérèse Murphy</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_europe"><span class="titolo_gc_europe">GC Human Rights Prearedness Founding Editor</span></p>
+
+        <p class="margin_bottom_20">Thérèse is chairperson of the European Master's on Human Rights & Democratisation, and sits on the Council of the Global Campus of Human Rights.</p>
+
+        <p class="margin_bottom_20">Professor Thérèse Murphy's work focuses on human rights law and practice. She is particularly interested in questions concerning health and human rights, including the right to science and the relationship between new technologies and human rights. She is also interested in human rights method.</p>
+
+        <p class="margin_bottom_20">Thérèse holds a university prize for teaching, the Lord Dearing Award for Teaching & Learning. She has wide-ranging expertise in the successful design and delivery of law modules, including more than 20 years' experience leading compulsory courses for beginning law students. On the postgraduate side, Thérèse led the team that introduced Gender, Sexuality & Human Rights, the first such option on a Taught Masters programme in the UK. And she has been a pioneer in the provision of popular skills programmes for law students at all levels.</p>
+
+        <p class="margin_bottom_20">She has written reports for national and international bodies, including UNAIDS, the Department of Health and the EU's Fundamental Rights Agency, and she is a member of the Moral and Ethical Advisory Group established by the Department of Health and Social Care as part of its efforts to improve public-health resilience.</p>
+
+        <p class="margin_bottom_20">She sits on the editorial board of the <em>Human Rights Law Review</em>, is associate editor of <em>BMC Health &amp; Human Rights</em>, and coeditor of the Hart book series, <em>Law and Health</em>. For a number of years she acted as an advisor to the British Council.</p>
+
+        <p class="margin_bottom_20">Awards for her work have come from a range of sources. She has been a Fulbright Scholar at Harvard Law School, a Holding Redlich Distinguished Visiting Fellow at Monash University, a Visiting Research Professor at the Law &amp; Innovation Group at Newcastle University, and both a Jean Monnet Fellow and a Fernand Braudel Senior Fellow at the European University Institute in Italy. Her work has also won awards from two of the UK's Research Councils and from the Canadian High Commission.</p>
+        <p class="margin_bottom_20">Thérèse's books include <em>Civil Liberties Law: The Human Rights Act Era</em>, written with Noel Whitty and Steven Livingstone; <em>New Technologies and Human Rights</em>; and <em>European Law and New Health Technologies</em>. Her book, <em>Health and Human Rights</em>, which was published by Hart in the summer of 2013, marked 10 years of the series 'Human Rights Law in Perspective'. Her most recent book is <em>The United Nations Special Procedures System</em>, which she edited with Aoife Nolan and Rosa Freedman.</p>
+
+</div>
+</div>
+<script>
+$(".kaj").modaal({
+content_source: '#kaj'
+});
+
+$(".tm").modaal({
+content_source: '#tm'
+});
+</script>
 <script>
 $(".ca").modaal({
 content_source: '#ca'
