founders final commit

--- a/website/06-Stories-HRP/pages/07-founders-part2.html
+++ b/website/06-Stories-HRP/pages/07-founders-part2.html
@@ -1,4 +1,4 @@
-<p class="subtitle_page_programme">Founders</p>
+<!-- <p class="subtitle_page_programme">Founders</p> -->
 <div class="table_accordion">
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/venice-school/2018/faculty/Kalliope_Agapiou_Josephides_venice_school_eiuc_global_campus-2.jpg" alt="Kalliope Agapiou-Josephides - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
