meet the team part2 fixed

--- a/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
+++ b/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
@@ -43,11 +43,11 @@
 
         <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_europe"><span class="titolo_gc_europe">GC Human Rights Prearedness Founding Editor</span></p>
 
-        <p class="margin_bottom_20">Kalliope Agapiou Josephides, PhD in Political Science, Paris I Panthéon - Sorbonne University, is a Jean Monnet Chair holder (2001) and Assistant Professor at the University of Cyprus. She sits on the Council of the Global Campus of Human Rights, and is the European Master’s Director for the University of Cyprus.</p>
+        <p class="margin_bottom_20">Kalliope Agapiou Josephides, PhD in Political Science, Paris I Panthéon - Sorbonne University, is a Jean Monnet Chair holder (2001) and Assistant Professor at the University of Cyprus. She sits on the Council of the Global Campus of Human Rights and is the European Master’s Director for the University of Cyprus.</p>
 
         <p class="margin_bottom_20">She served as chair of the European Institute for Gender Equality (EU Agency) and Vice- President of the European Inter University Centre for Human Rights and Democratisation. She is a founding member of the Mediterranean Women Mediators Network, and a member of the scientific advisory board of the European Yearbook of Human Rights.</p>
 
-        <p class="margin_bottom_20">She has a great interest, and long experience, in the nexus of human rights and gender equality. She has participated in and led several national and international research projects. She has served as academic convener/speaker at high-level international events and has taught/delivered lectures around the world. </p>
+        <p class="margin_bottom_20">She has a great interest, and long experience, in the nexus of human rights and gender equality. She has participated in and led several national and international research projects. She served as lead author in the <em>United Nations Global Study on Children Deprived of Liberty</em> and the European Parliament study on <em>Women’s Rights During Democratic Transitions</em>. She has served as academic convener/speaker at high-level international events and has taught/delivered lectures around the world.</p>
 
 </div>
 
