--- a/website/06-Stories-HRP/pages/02-meet-the-team-part2.html
+++ b/website/06-Stories-HRP/pages/02-meet-the-team-part2.html
@@ -25,11 +25,14 @@
 .margin_bottom_20{
         color: #75716e;
 }
-
 </style>
 <div class="ce_text description_page_programme block show">
-<p class="subtitle_page_programme">Founding Editors</p>
+<p class="subtitle_page_programme">Editors</p>
 <p><a href="#kaj" target="_blank" class="titolo_gc_europe kaj">Kalliope Agapiou-Josephides</a>, University of Cyprus</p>
+<p><a href="#ca" target="_blank" class="titolo_gc_hq ca">Chiara Altafin</a>, GC Headquarters</p>
+<p><a href="#ab" target="_blank" class="titolo_gc_africa ab">Ashwanee Budoo</a>, University of Pretoria</p>
+<p><a href="#vm" target="_blank" class="titolo_gc_latin_america vm">Veronica Gomez</a>, University of San Martin, Buenos Aires</p>
+<p><a href="#mh" target="_blank" class="titolo_gc_asia_pacific mh">Mike Hayes</a>, Mahidol University</p>
 <p><a href="#tm" target="_blank" class="titolo_gc_europe tm">Thérèse Murphy</a>, Queen's University Belfast</p>
 
 <div id="kaj" style="display:none;">
@@ -40,15 +43,77 @@
 
         <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_europe"><span class="titolo_gc_europe">GC Human Rights Prearedness Founding Editor</span></p>
 
-        <p class="margin_bottom_20">Kalliope Agapiou Josephides has a great interest, and a long experience in the nexus of human rights and gender equality. She served as Chair of the European Institute for Gender Equality (EU Agency), Vice-President of the <em>European Inter University Centre for Human Rights and Democratisation</em>.</p>
+        <p class="margin_bottom_20">Kalliope Agapiou Josephides, PhD in Political Science, Paris I Panthéon - Sorbonne University, is a Jean Monnet Chair holder (2001) and Assistant Professor at the University of Cyprus. She sits on the Council of the Global Campus of Human Rights and is the European Master’s Director for the University of Cyprus.</p>
 
-        <p class="margin_bottom_20">She is a founding member of the <em>Mediterranean Women Mediators Network</em>.</p>
+        <p class="margin_bottom_20">She served as chair of the European Institute for Gender Equality (EU Agency) and Vice- President of the European Inter University Centre for Human Rights and Democratisation. She is a founding member of the Mediterranean Women Mediators Network, and a member of the scientific advisory board of the European Yearbook of Human Rights.</p>
 
-        <p class="margin_bottom_20">She has participated in and led several national and international research projects, including a European Parliament study on “Women’s Rights During Democratic Transitions”. She has served as academic convener/ speaker at high-level international events and has taught/ delivered lectures across Europe and around the world: e.g. France, Germany, Italy, Belgium, Poland, Portugal, Argentina, India, China, Australia…</p>
-
-        <p class="margin_bottom_20">Kalliope Agapiou Josephides holds a PhD in Political Science from the Paris I Panthéon - Sorbonne University. She is an Assistant Professor at the University of Cyprus and the recipient of a Jean Monnet Chair (2001). She is the European Master Director for the University of Cyprus.</p>
+        <p class="margin_bottom_20">She has a great interest, and long experience, in the nexus of human rights and gender equality. She has participated in and led several national and international research projects. She served as lead author in the <em>United Nations Global Study on Children Deprived of Liberty</em> and the European Parliament study on <em>Women’s Rights During Democratic Transitions</em>. She has served as academic convener/speaker at high-level international events and has taught/delivered lectures around the world.</p>
 
 </div>
+
+<div id="ca" style="display:none;">
+
+        <img src="files/eiuc/chiara_altafin.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Chiara Altafin</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_hq"><span class="titolo_gc_hq">GC Headquarters</span></p>
+
+        <p class="margin_bottom_20">Chiara Altafin is research manager at the Global Campus Headquarters in Venice, where she worked as one of the lead researchers on the UN Global Study on Children Deprived of Liberty, and as senior researcher on the FP7 project 'Fostering Human Rights Among European (External and Internal) Policies'. She has been a teaching fellow for the European Master’s in Human Rights and Democratisation since September 2015.</p>
+
+        <p class="margin_bottom_20">She holds a PhD in International Law and an LLM in Comparative, European and International Laws, both from the European University Institute, and a Master’s in Rule of Law, Democracy and Human Rights from LUISS University. She graduated cum laude at the Law Department of Roma Tre University and has been admitted to the Italian Bar.</p>
+
+    <p class="margin_bottom_20">Her main research interests are: children’s rights; economic, social and cultural rights in times of crisis, including in contexts of armed conflict and occupation; business and human rights; social justice; and environmental justice.</p>
+</div>
+<div id="ab" style="display:none;">
+
+        <img src="files/eiuc/hrp/ashwanee_badoo_gchumanrights.png" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Ashwanee Budoo</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_africa"><span class="titolo_gc_africa">University of Pretoria</span></p>
+
+        <p class="margin_bottom_20">Dr Ashwanee Budoo is programme manager of the Master’s in Human Rights and Democratisation in Africa at the Centre for Human Rights, University of Pretoria. </p>
+
+        <p class="margin_bottom_20">She is a women’s rights advocate with research interests in the African human rights system, with a focus on the rights of women and girls.</p>
+
+        <p class="margin_bottom_20">She also teaches on different programmes and supervises master's, doctoral and undergraduate students. </p> 
+
+</div>
+<div id="vm" style="display:none;">
+
+        <img src="https://gchumanrights.org/files/eiuc/img_global_campus_chair.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Veronica Gomez</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_latin_america"><span class="titolo_gc_latin_america">University of San Martin, Buenos Aires</span></p>
+
+        <p class="margin_bottom_20">Professor Veronica Gomez is President of the Global Campus of Human Rights. </p>
+
+        <p class="margin_bottom_20">She is professor of law at the University of San Martin (UNSAM). She is director for education at Global Campus Latin America (LATMA) in Buenos Aires (2011-). She is responsible for various international human rights programmes with the participation of regional stakeholders. She holds a degree in international law (UBA) and an LLM (Nottingham). </p>
+
+        <p class="margin_bottom_20">Her field of expertise is in the area of international and regional protection of human rights, and genetics and human rights.</p>
+
+        <p class="margin_bottom_20">Her professional path includes her role as Principal Specialist at the Inter-American Commission of Human Rights of the Organisation of American States in Washington DC (1998-2009) and as a Senior Advisor on Human Rights at the Ministry of Foreign Affairs of Argentina (2010-2011). </p>
+
+</div>
+<div id="mh" style="display:none;">
+
+        <img src="files/eiuc/apma/lecturers/Mike_Hayes_gchumanrights.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Mike Hayes</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_asia_pacific"><span class="titolo_gc_asia_pacific">Mahidol University</span></p>
+
+        <p class="margin_bottom_20">Dr Mike Hayes is a lecturer at the Institute for Human Rights and Peace Studies at Mahidol University's Salaya Campus. He is the programme chair of APMA, the Asia Pacific Master’s in Human Rights and Democratisation. </p>
+
+        <p class="margin_bottom_20">He has been active in developing the capacity of lecturers to teach and research human rights at higher education institutions in Southeast Asia. </p>
+
+        <p class="margin_bottom_20">His research interests include migration, non-citizens and human rights advocacy.   </p>
+
+</div>
+
+
 <div id="tm" style="display:none;">
 
         <img src="files/eiuc/ema/Therese_Murphy_gchumanrights3.png" class="img-center" width="110px" >
@@ -57,18 +122,11 @@
 
         <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_europe"><span class="titolo_gc_europe">GC Human Rights Prearedness Founding Editor</span></p>
 
-        <p class="margin_bottom_20">Thérèse is chairperson of the European Master's on Human Rights & Democratisation, and sits on the Council of the Global Campus of Human Rights.</p>
+        <p class="margin_bottom_20">Thérèse Murphy is professor of law and director of the Health & Human Rights Unit at Queen’s University Belfast. She is also chairperson of the European Master's on Human Rights and Democratisation, and serves on the Council of the Global Campus of Human Rights. A former Fulbright fellow, she studied law at University College Dublin and the University of Cambridge, and was admitted to the bar at King’s Inns, Dublin.</p>
 
-        <p class="margin_bottom_20">Professor Thérèse Murphy's work focuses on human rights law and practice. She is particularly interested in questions concerning health and human rights, including the right to science and the relationship between new technologies and human rights. She is also interested in human rights method.</p>
+        <p class="margin_bottom_20">Her field of expertise is human rights law and practice, with particular interests in health, science and technology, and human rights method. </p>
 
-        <p class="margin_bottom_20">Thérèse holds a university prize for teaching, the Lord Dearing Award for Teaching & Learning. She has wide-ranging expertise in the successful design and delivery of law modules, including more than 20 years' experience leading compulsory courses for beginning law students. On the postgraduate side, Thérèse led the team that introduced Gender, Sexuality & Human Rights, the first such option on a Taught Masters programme in the UK. And she has been a pioneer in the provision of popular skills programmes for law students at all levels.</p>
-
-        <p class="margin_bottom_20">She has written reports for national and international bodies, including UNAIDS, the Department of Health and the EU's Fundamental Rights Agency, and she is a member of the Moral and Ethical Advisory Group established by the Department of Health and Social Care as part of its efforts to improve public-health resilience.</p>
-
-        <p class="margin_bottom_20">She sits on the editorial board of the <em>Human Rights Law Review</em>, is associate editor of <em>BMC Health &amp; Human Rights</em>, and coeditor of the Hart book series, <em>Law and Health</em>. For a number of years she acted as an advisor to the British Council.</p>
-
-        <p class="margin_bottom_20">Awards for her work have come from a range of sources. She has been a Fulbright Scholar at Harvard Law School, a Holding Redlich Distinguished Visiting Fellow at Monash University, a Visiting Research Professor at the Law &amp; Innovation Group at Newcastle University, and both a Jean Monnet Fellow and a Fernand Braudel Senior Fellow at the European University Institute in Italy. Her work has also won awards from two of the UK's Research Councils and from the Canadian High Commission.</p>
-        <p class="margin_bottom_20">Thérèse's books include <em>Civil Liberties Law: The Human Rights Act Era</em>, written with Noel Whitty and Steven Livingstone; <em>New Technologies and Human Rights</em>; and <em>European Law and New Health Technologies</em>. Her book, <em>Health and Human Rights</em>, which was published by Hart in the summer of 2013, marked 10 years of the series 'Human Rights Law in Perspective'. Her most recent book is <em>The United Nations Special Procedures System</em>, which she edited with Aoife Nolan and Rosa Freedman.</p>
+        <p class="margin_bottom_20">She is a member of the editorial board of the <em>Human Rights Law Review</em>, associate editor of <em>BMC International Health & Human Rights</em> and co-editor of the Bloomsbury/Hart book series, Law and Health. She sits on the Moral & Ethical Advisory Group established by the UK’s Department of Health and Social Care.</p>
 
 </div>
 </div>
@@ -79,5 +137,22 @@ content_source: '#kaj'
 
 $(".tm").modaal({
 content_source: '#tm'
+});
+</script>
+<script>
+$(".ca").modaal({
+content_source: '#ca'
+});
+
+$(".ab").modaal({
+content_source: '#ab'
+});
+
+$(".vm").modaal({
+content_source: '#vm'
+});
+
+$(".mh").modaal({
+content_source: '#mh'
 });
 </script>
